# src/app/services/models/category-projects-dto.ts
@@ -1,7 +1,9 @@
 /* tslint:disable */
 /* eslint-disable */
+import { SousCategory } from '../models/sous-category';
 export interface CategoryProjectsDto {
   description: string;
   id?: number;
   name: string;
+  sousCategory?: Array<SousCategory>;
 }
